--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ background-size: cover;
 }
 /* Slideshow container */
 .slideshow-container {
-  max-width: 5500px;
+  max-width: 100%;
   position: center;
   margin: auto;
 }
@@ -128,26 +128,68 @@ background-size: cover;
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="IMG_1326.jpg" style="width:70%">
+  <img src="/Users/art/Desktop/coding-environment/src/thc/IMG_1326.jpg" style="width:70%">
   <!-- <div class="text">full colour custom tees</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="IMG_1020.jpg" style="width:70%">
+  <img src="/Users/art/Desktop/coding-environment/src/thc/IMG_1020.JPG" style="width:70%">
   <!-- <div class="text">noble tees</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="a5dd051a-86c2-4621-aab2-c2cfa361a421.jpg" style="width:70%">
-<!--   <div class="text">fine art tees</div> -->
+  <img src="/Users/art/Desktop/coding-environment/src/thc/IMG_0857.jpg" style="width:70%">
+  <!-- <div class="text">noble tees</div> -->
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="/Users/art/Desktop/coding-environment/src/thc/IMG_0681.jpg" style="width:70%">
+  <!-- <div class="text">noble tees</div> -->
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="/Users/art/Desktop/coding-environment/src/thc/IMG_0446.jpg" style="width:70%">
+  <!-- <div class="text">noble tees</div> -->
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="/Users/art/Desktop/coding-environment/src/thc/621f60f2-30f5-4af4-b7aa-4d558cb807d1.JPG" style="width:70%">
+  <!-- <div class="text">noble tees</div> -->
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="/Users/art/Desktop/coding-environment/src/thc/6549fd3e-d795-4ed8-bbf2-60bada980b31.JPG" style="width:70%">
+  <!-- <div class="text">noble tees</div> -->
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="/Users/art/Desktop/coding-environment/src/thc/fe0912cc-b39c-49d2-89b4-f8fdf37b393a.JPG" style="width:70%">
+  <!-- <div class="text">noble tees</div> -->
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="/Users/art/Desktop/coding-environment/src/thc/A697561A-4380-4D61-85B2-1D81F608FAA1.JPG" style="width:70%">
+  <!-- <div class="text">noble tees</div> -->
 </div>
 
 </div>
 <br>
 
 <div style="text-align:center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
   <span class="dot"></span>
   <span class="dot"></span>
   <span class="dot"></span>
@@ -175,7 +217,7 @@ function showSlides() {
 }
 </script>
 background-image: url("IMG_1293.jpg");
- background-color: #cccccc;
+
    <h5>coded by: artelo.studio</h5>
 </body>
 </html>
