--- a/index.html
+++ b/index.html
@@ -128,55 +128,55 @@ background-size: cover;
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="/Users/art/Desktop/coding-environment/src/thc/IMG_1326.jpg" style="width:70%">
+  <img src="/thc/IMG_1326.jpg" style="width:70%">
   <!-- <div class="text">full colour custom tees</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="/Users/art/Desktop/coding-environment/src/thc/IMG_1020.JPG" style="width:70%">
+  <img src="/thc/IMG_1020.JPG" style="width:70%">
   <!-- <div class="text">noble tees</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="/Users/art/Desktop/coding-environment/src/thc/IMG_0857.jpg" style="width:70%">
+  <img src="/thc/IMG_0857.jpg" style="width:70%">
   <!-- <div class="text">noble tees</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="/Users/art/Desktop/coding-environment/src/thc/IMG_0681.jpg" style="width:70%">
+  <img src="/thc/IMG_0681.jpg" style="width:70%">
   <!-- <div class="text">noble tees</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="/Users/art/Desktop/coding-environment/src/thc/IMG_0446.jpg" style="width:70%">
+  <img src="/thc/IMG_0446.jpg" style="width:70%">
   <!-- <div class="text">noble tees</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="/Users/art/Desktop/coding-environment/src/thc/621f60f2-30f5-4af4-b7aa-4d558cb807d1.JPG" style="width:70%">
+  <img src="/thc/621f60f2-30f5-4af4-b7aa-4d558cb807d1.JPG" style="width:70%">
   <!-- <div class="text">noble tees</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="/Users/art/Desktop/coding-environment/src/thc/6549fd3e-d795-4ed8-bbf2-60bada980b31.JPG" style="width:70%">
+  <img src="/thc/6549fd3e-d795-4ed8-bbf2-60bada980b31.JPG" style="width:70%">
   <!-- <div class="text">noble tees</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="/Users/art/Desktop/coding-environment/src/thc/fe0912cc-b39c-49d2-89b4-f8fdf37b393a.JPG" style="width:70%">
+  <img src="/thc/fe0912cc-b39c-49d2-89b4-f8fdf37b393a.JPG" style="width:70%">
   <!-- <div class="text">noble tees</div> -->
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="/Users/art/Desktop/coding-environment/src/thc/A697561A-4380-4D61-85B2-1D81F608FAA1.JPG" style="width:70%">
+  <img src="/thc/A697561A-4380-4D61-85B2-1D81F608FAA1.JPG" style="width:70%">
   <!-- <div class="text">noble tees</div> -->
 </div>
 
