slideshow time edit

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ background-size: cover;
 }
 
 /* The dots/bullets/indicators */
-.dot {
+/* .dot {
   height: 15px;
   width: 15px;
   margin: 0 2px;
@@ -79,7 +79,7 @@ background-size: cover;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 1.8s ease;
-}
+} */
 
 .active {
   background-color: #717171;
@@ -213,7 +213,7 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000);
+  setTimeout(showSlides, 7550);
 }
 </script>
 
