resized photos in carousel

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ background-size: cover;
   max-width: 100%;
   position: center;
   margin: auto;
+  outline: 2px green;
 }
 
 /* Caption text */
@@ -118,6 +119,10 @@ group img {
    width: 65%;
 }
 
+h5 {
+  color: white;
+}
+
 </style>
 </head>
 
@@ -151,19 +156,7 @@ group img {
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="IMG_0857.jpg" style="width:70%">
-  <!-- <div class="text">noble tees</div> -->
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext"></div>
   <img src="IMG_0681.jpg" style="width:70%">
-  <!-- <div class="text">noble tees</div> -->
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext"></div>
-  <img src="IMG_0446.jpg" style="width:70%">
   <!-- <div class="text">noble tees</div> -->
 </div>
 
@@ -202,8 +195,7 @@ group img {
   <span class="dot"></span>
   <span class="dot"></span>
   <span class="dot"></span>
-  <span class="dot"></span>
-  <span class="dot"></span>
+
 </div>
 
 <script>
