--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ img {vertical-align: middle;}
 }
 
 html {
-background: url( IMG_1293.jpg ) no-repeat center center fixed;
+background: url( weedBackground.jpg ) no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
@@ -47,9 +47,11 @@ background-size: cover;
 }
 /* Slideshow container */
 .slideshow-container {
-  max-width: 100%;
+  max-width: 70%;
   position: center;
-  margin: auto;
+  margin-left: 25%;
+  margin-right: auto;
+
   outline: 2px green;
 }
 
