--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@ background-size: cover;
   animation-name: fade;
   animation-duration: 7s;
 }
+.group {
+  margin-left: auto;
+  margin-right: auto;
+}
 
 @-webkit-keyframes fade {
   from {opacity: .4}
