group center edit

--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@ group {
 group img {
    width: 65%;
 }
+#group {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 h5 {
   color: white;
